@@ -6,7 +6,7 @@ build_requires:
   Test::More: 0
 configure_requires:
   Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
+generated_by: 'Module::Build version 0.3603'
 license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,9 +15,9 @@ name: Number-Interval
 provides:
   Number::Interval:
     file: lib/Number/Interval.pm
-    version: 0.05
+    version: 0.06
 resources:
   homepage: http://github.com/timj/perl-Number-Interval/tree/master
   license: http://opensource.org/licenses/gpl-license.php
   repository: git://github.com/timj/perl-Number-Interval.git
-version: 0.05
+version: 0.06
