@@ -1,6 +1,6 @@
 Number::Interval - A representation of a numeric interval
 
-This is release V0.05 of Number::Interval. This module can be used to
+This is release V0.06 of Number::Interval. This module can be used to
 specify bound or unbound intervals (ie a max and a min value, a max
 only or a min only) and then compare them with other intervals, find
 out whether a number is within the interval and provide a stringified form
@@ -32,7 +32,7 @@ Tim Jenness <tjenness@cpan.org>
 Brad Cavanagh <brad.cavanagh@gmail.com>
 
 Copyright (C) 2002 - 2004 UK Particle Physics and Astronomy Research
-Council. Copyright (C) 2009 Science and Technology Facilities Council.
+Council. Copyright (C) 2009-2011 Science and Technology Facilities Council.
 All Rights Reserved.
 
 This program is free software; you can redistribute it and/or modify it under
@@ -50,6 +50,11 @@ Place,Suite 330, Boston, MA  02111-1307, USA
 terms as Perl itself.
 
 CHANGES IN THIS RELEASE
+
+V0.06 * Fix intersection() to respect inc_min and inc_max
+        (Fixes RT #72281 (Gianluca Torta))
+      * contains() fixed to recognize inc_min and inc_max
+        when min==max.
 
 V0.05 Many fixes since 0.01
       * Add sizeof() method
